Add native physical drive integration and refine UI